--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,38060],[[4,5,6,0,[],[1,29,38030],[[7,8,9,0,[],[1,32,38027],[[10,11,12,0,[],[1,35,38022],[],[[13,0,0,[],[1,266,37789],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,47457],[[4,5,6,0,[],[1,26,47429],[[7,8,9,0,[],[1,30,47424],[[10,11,12,0,[],[1,32,47420],[],[[13,0,0,[],[1,244,47207],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate","*D:\\Automate TTD\\Automate","*..","*Document","*D:\\Automate TTD\\Automate\\Document","*../Document","*Auto Tester","*D:\\Automate TTD\\Automate\\Document\\Auto Tester","*../Document/Auto%20Tester","*Roles","*D:\\Automate TTD\\Automate\\Document\\Auto Tester\\roles.robot","*../Document/Auto%20Tester/roles.robot","*TC05-Search Filter"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate","*D:\\Automate TTD\\Automate","*..","*Document","*D:\\Automate TTD\\Automate\\Document","*../Document","*Auto Tester","*D:\\Automate TTD\\Automate\\Document\\Auto Tester","*../Document/Auto%20Tester","*User","*D:\\Automate TTD\\Automate\\Document\\Auto Tester\\User.robot","*../Document/Auto%20Tester/User.robot","*TC08-Check Edit Page"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:38","fail":0,"id":"s1","label":"Automate","name":"Automate","pass":1,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1","label":"Automate.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1-s1","label":"Automate.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1-s1-s1","label":"Automate.Document.Auto Tester.Roles","name":"Roles","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:47","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:47","fail":0,"id":"s1","label":"Automate","name":"Automate","pass":1,"skip":0},{"elapsed":"00:00:47","fail":0,"id":"s1-s1","label":"Automate.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:47","fail":0,"id":"s1-s1-s1","label":"Automate.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:47","fail":0,"id":"s1-s1-s1-s1","label":"Automate.Document.Auto Tester.User","name":"User","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1712907978542;
+window.output["baseMillis"] = 1712920688372;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 38076;
+window.output["generated"] = 47474;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
