--- a/log.html
+++ b/log.html
@@ -2081,25 +2081,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,15725],[],[[4,0,0,[],[1,66,15659],[[1,5,6,0,0,0,0,0,[1,66,6631],[[0,7,8,0,9,10,0,0,[1,67,1622],[[67,2,11]]],[0,12,8,0,13,0,0,0,[1,1689,878],[]],[0,14,8,0,15,16,0,0,[1,2568,1039],[]],[0,14,8,0,15,17,0,0,[1,3608,1034],[]],[0,14,8,0,15,18,0,0,[1,4642,1024],[]],[0,14,8,0,15,19,0,0,[1,5667,1030],[]]]],[0,20,6,0,0,21,0,0,[1,6698,7932],[[0,14,8,0,15,16,0,0,[1,6699,1024],[]],[0,14,8,0,15,17,0,0,[1,7724,1022],[]],[0,22,8,0,23,24,0,0,[1,8746,1668],[[8747,2,25]]],[0,22,8,0,23,26,0,0,[1,10415,1566],[[10416,2,27]]],[0,28,8,0,29,30,0,0,[1,11982,1060],[[11982,2,31]]],[0,28,8,0,29,18,0,0,[1,13043,1074],[[13043,2,32]]],[0,33,8,0,34,35,0,0,[1,14116,513],[]]]],[0,33,8,0,34,36,0,0,[1,14631,520],[]],[2,37,8,0,38,0,0,0,[1,15151,574],[]]]]],[[1,39,8,0,40,41,0,0,[1,66,0],[]]],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,3386],[],[[4,0,0,[],[0,55,3330,5],[[0,6,0,0,0,0,0,0,[1,56,2223],[[0,7,8,0,9,10,0,0,[1,56,1851],[[56,2,11]]],[0,12,8,0,13,0,0,0,[1,1908,370],[]],[0,14,8,0,15,16,0,0,[1,2278,0],[]]]],[0,17,0,0,0,0,0,0,[0,2279,1106],[[0,18,8,0,19,20,0,0,[0,2279,1104],[[2279,2,21],[3381,2,22],[3381,5,5]]],[0,18,8,0,19,23,0,0,[3,3384,0],[]],[0,24,8,0,25,26,0,0,[3,3384,0],[]],[0,24,8,0,25,27,0,0,[3,3384,0],[]]]],[0,28,8,0,29,0,0,0,[3,3385,0],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Homework1","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Himework1/Homework1.robot","*Document/Auto%20Tester/P%27Beam/Himework1/Homework1.robot","*TC001-login pass","*Open Browser Web","*Keyword","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}    ${browser}","*Opening browser 'chrome' to base url '<a href=\"https://automate-test.stpb-digital.com/login/\">https://automate-test.stpb-digital.com/login/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${locator_Email}","*${locator_password}","*${locator_btnlogin}","*${locator_create_account}","*Input data for login page","*user.test@krupbeam.com    123456789","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${locator_Email}    ${email}","*Typing text 'user.test@krupbeam.com' into text field 'id = email'.","*${locator_password}    ${password}","*Typing text '123456789' into text field 'name = password'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${locator_btnunmark}","*Clicking element 'xpath = //*[@id=\"__next\"]/div[1]/div/div/div/div/div/form/div[2]/div/div/button'.","*Clicking element 'id = btn-login'.","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Search Filters","*Kru P' Beam","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*0.5s"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/Login.robot","*Document/Auto%20Tester/Login.robot","*TC01-Login Pass","*Element with locator 'id=username' not found.","*Open Browser Web","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}    ${browser}","*Opening browser 'chrome' to base url '<a href=\"https://dev-tm.techmaster.in.th/login\">https://dev-tm.techmaster.in.th/login\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*0.5s","*Input Data for Login Passing","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${locator_username}    superadmin","*Typing text 'superadmin' into text field 'id=username'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-1.png\"><img src=\"selenium-screenshot-1.png\" width=\"800px\">\x3c/a>","*${locator_password}    P@ssW0rd","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${locator_btneye}","*${locator_btnlogin}","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Homework1","name":"Homework1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Login","name":"Login","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1713414262470;
+window.output["baseMillis"] = 1713414759983;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15731;
+window.output["generated"] = 3390;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
