--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,15725],[],[[4,0,0,[],[1,66,15659],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,3386],[],[[4,0,0,[],[0,55,3330,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Homework1","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Himework1/Homework1.robot","*Document/Auto%20Tester/P%27Beam/Himework1/Homework1.robot","*TC001-login pass"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/Login.robot","*Document/Auto%20Tester/Login.robot","*TC01-Login Pass","*Element with locator 'id=username' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Homework1","name":"Homework1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Login","name":"Login","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1713414262470;
+window.output["baseMillis"] = 1713414759983;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15731;
+window.output["generated"] = 3390;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
