--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,15544],[[4,5,6,0,[],[1,7,15537],[[7,8,9,0,[],[1,8,15536],[[10,11,12,0,[],[1,8,15535],[[13,14,15,0,[],[1,9,15534],[[16,17,18,0,[],[1,9,15532],[],[[19,0,0,[],[1,63,15478],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,3150],[[4,5,6,0,[],[0,7,3142],[[7,8,9,0,[],[0,8,3140],[[10,11,12,0,[],[0,9,3137],[],[[13,0,0,[],[0,59,3086,14],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*P'Beam","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam","*../Document/Auto%20Tester/P%27Beam","*Himework1","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Himework1","*../Document/Auto%20Tester/P%27Beam/Himework1","*Homework1","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Himework1/Homework1.robot","*../Document/Auto%20Tester/P%27Beam/Himework1/Homework1.robot","*TC001-login pass"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*Login","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/Login.robot","*../Document/Auto%20Tester/Login.robot","*TC01-Login Pass","*Element with locator 'id=username' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam","name":"P'Beam","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam.Himework1","name":"Himework1","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam.Himework1.Homework1","name":"Homework1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":0,"skip":0},{"elapsed":"00:00:03","fail":1,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":0,"skip":0},{"elapsed":"00:00:03","fail":1,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":0,"skip":0},{"elapsed":"00:00:03","fail":1,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.Login","name":"Login","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1713414262668;
+window.output["baseMillis"] = 1713414759953;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15547;
+window.output["generated"] = 3155;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
