Update & Add File

--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,3386],[],[[4,0,0,[],[0,55,3330,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,35754],[],[[4,0,0,[],[1,66,35683],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/Login.robot","*Document/Auto%20Tester/Login.robot","*TC01-Login Pass","*Element with locator 'id=username' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles/roles.robot","*Document/Auto%20Tester/TourMaster/User/Roles/roles.robot","*TC05-Search Filter"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Login","name":"Login","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:36","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"Roles","name":"Roles","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1713414759983;
+window.output["baseMillis"] = 1713430580077;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3390;
+window.output["generated"] = 35759;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
