--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,35789],[[4,5,6,0,[],[1,8,35780],[[7,8,9,0,[],[1,9,35779],[[10,11,12,0,[],[1,10,35778],[[13,14,15,0,[],[1,10,35776],[[16,17,18,0,[],[1,11,35775],[[16,19,20,0,[],[1,11,35773],[],[[21,0,0,[],[1,87,35697],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29942],[[4,5,6,0,[],[1,8,29933],[[7,8,9,0,[],[1,8,29932],[[10,11,12,0,[],[1,9,29930],[[13,14,15,0,[],[1,9,29929],[[16,17,18,0,[],[1,10,29927],[[16,19,20,0,[],[1,10,29925],[],[[21,0,0,[],[1,63,29871],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*User","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User","*../Document/Auto%20Tester/TourMaster/User","*Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles","*../Document/Auto%20Tester/TourMaster/User/Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles/roles.robot","*../Document/Auto%20Tester/TourMaster/User/Roles/roles.robot","*TC05-Search Filter"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*User","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User","*../Document/Auto%20Tester/TourMaster/User","*Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles","*../Document/Auto%20Tester/TourMaster/User/Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles/roles.robot","*../Document/Auto%20Tester/TourMaster/User/Roles/roles.robot","*TC03-View Roles page"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:36","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:36","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":1,"skip":0},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User","name":"User","pass":1,"skip":0},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User.Roles","name":"Roles","pass":1,"skip":0},{"elapsed":"00:00:36","fail":0,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User.Roles.Roles","name":"Roles","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User","name":"User","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User.Roles","name":"Roles","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User.Roles.Roles","name":"Roles","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1713430580056;
+window.output["baseMillis"] = 1713438150300;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 35796;
+window.output["generated"] = 29947;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
