--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,9361],[],[[4,0,0,[],[1,73,9287],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,25468],[],[[4,0,0,[],[0,88,25379,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Login.robot","*Document/Auto%20Tester/TourMaster/Login.robot","*TC03-Login No Username or Password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles/roles.robot","*Document/Auto%20Tester/TourMaster/User/Roles/roles.robot","*TC06-Check Pagination","*Element with locator 'xpath=//*[@id=\"rc_select_5_list_1\"]/span' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:25","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:25","fail":1,"id":"s1","label":"Roles","name":"Roles","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1714365642248;
+window.output["baseMillis"] = 1714372741894;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9365;
+window.output["generated"] = 25473;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
