--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,24972],[[4,5,6,0,[],[0,8,24965],[[7,8,9,0,[],[0,8,24964],[[10,11,12,0,[],[0,9,24963],[[13,14,15,0,[],[0,10,24961],[[16,17,18,0,[],[0,10,24960],[[16,19,20,0,[],[0,11,24959],[],[[21,0,0,[],[0,58,24911,22],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,18545],[[4,5,6,0,[],[1,13,18531],[[7,8,9,0,[],[1,15,18530],[[10,11,12,0,[],[1,15,18529],[[13,14,15,0,[],[1,16,18526],[[16,17,18,0,[],[1,17,18525],[[16,19,20,0,[],[1,18,18523],[],[[21,0,0,[],[1,101,18437],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*User","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User","*../Document/Auto%20Tester/TourMaster/User","*Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles","*../Document/Auto%20Tester/TourMaster/User/Roles","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/User/Roles/roles.robot","*../Document/Auto%20Tester/TourMaster/User/Roles/roles.robot","*TC06-Check Pagination","*Element with locator 'xpath=//*[@id=\"rc_select_5_list_1\"]/span' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*Program","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program","*../Document/Auto%20Tester/TourMaster/Program","*Unit","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Unit","*../Document/Auto%20Tester/TourMaster/Program/Unit","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Unit/Unit.robot","*../Document/Auto%20Tester/TourMaster/Program/Unit/Unit.robot","*TC01-Check Unit Page"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:25","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:25","fail":1,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User","name":"User","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User.Roles","name":"Roles","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.User.Roles.Roles","name":"Roles","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program","name":"Program","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Unit","name":"Unit","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Unit.Unit","name":"Unit","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1714372742027;
+window.output["baseMillis"] = 1714465224614;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24977;
+window.output["generated"] = 18549;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
