--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,18489],[],[[4,0,0,[],[1,65,18423],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,37077],[],[[4,0,0,[],[1,90,36986],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Unit","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Unit/Unit.robot","*Document/Auto%20Tester/TourMaster/Program/Unit/Unit.robot","*TC01-Check Unit Page"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Unit","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Unit/Unit.robot","*Document/Auto%20Tester/TourMaster/Program/Unit/Unit.robot","*TC06 - Pagination"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Unit","name":"Unit","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:37","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:37","fail":0,"id":"s1","label":"Unit","name":"Unit","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1714465224654;
+window.output["baseMillis"] = 1714555671506;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 18497;
+window.output["generated"] = 37087;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
