--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,37001],[[4,5,6,0,[],[1,11,36989],[[7,8,9,0,[],[1,12,36987],[[10,11,12,0,[],[1,13,36985],[[13,14,15,0,[],[1,15,36980],[[16,17,18,0,[],[1,15,36978],[[16,19,20,0,[],[1,16,36976],[],[[21,0,0,[],[1,70,36921],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,20165],[[4,5,6,0,[],[0,6,20158],[[7,8,9,0,[],[0,7,20157],[[10,11,12,0,[],[0,8,20156],[[13,14,15,0,[],[0,9,20154],[[16,17,18,0,[],[0,9,20153],[[19,20,21,0,[],[0,10,20152],[],[[22,0,0,[],[0,59,20100,23],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*Program","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program","*../Document/Auto%20Tester/TourMaster/Program","*Unit","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Unit","*../Document/Auto%20Tester/TourMaster/Program/Unit","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Unit/Unit.robot","*../Document/Auto%20Tester/TourMaster/Program/Unit/Unit.robot","*TC06 - Pagination"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*Program","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program","*../Document/Auto%20Tester/TourMaster/Program","*Item Type","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type","*../Document/Auto%20Tester/TourMaster/Program/Item_Type","*Item","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type/item.robot","*../Document/Auto%20Tester/TourMaster/Program/Item_Type/item.robot","*TC01 - Check Item Type Page","*Element 'xpath=//*[@id=\"rc-menu-uuid-68547-1-SETTING_PROGRAM-popup\"]' not visible after 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:37","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:37","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:37","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:37","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:37","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":1,"skip":0},{"elapsed":"00:00:37","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program","name":"Program","pass":1,"skip":0},{"elapsed":"00:00:37","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Unit","name":"Unit","pass":1,"skip":0},{"elapsed":"00:00:37","fail":0,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Unit.Unit","name":"Unit","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:20","fail":1,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":0,"skip":0},{"elapsed":"00:00:20","fail":1,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":0,"skip":0},{"elapsed":"00:00:20","fail":1,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":0,"skip":0},{"elapsed":"00:00:20","fail":1,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":0,"skip":0},{"elapsed":"00:00:20","fail":1,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program","name":"Program","pass":0,"skip":0},{"elapsed":"00:00:20","fail":1,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Item Type","name":"Item Type","pass":0,"skip":0},{"elapsed":"00:00:20","fail":1,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Item Type.Item","name":"Item","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1714555671592;
+window.output["baseMillis"] = 1714963757921;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 37010;
+window.output["generated"] = 20169;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
