--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,59291],[],[[4,0,0,[],[0,161,59128,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,63557],[],[[4,0,0,[],[0,83,63471,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Supplier","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle/Supplier_list/Supplier.robot","*Document/Auto%20Tester/TourMaster/Vehicle/Supplier_list/Supplier.robot","*TC02 - Check Create Supplier Page","*Element 'xpath=/html/body/div[5]/div/div/div[2]/div/div/div/div[1]' not visible after 5 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Supplier","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle/Supplier_list/Supplier.robot","*Document/Auto%20Tester/TourMaster/Vehicle/Supplier_list/Supplier.robot","*TC02 - Check Create Supplier Page","*Element 'xpath=/html/body/div[5]/div/div/div[4]' not visible after 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:59","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:59","fail":1,"id":"s1","label":"Supplier","name":"Supplier","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:03","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:01:04","fail":1,"id":"s1","label":"Supplier","name":"Supplier","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1715599170297;
+window.output["baseMillis"] = 1715654404739;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 59304;
+window.output["generated"] = 63566;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
